Fixed height on mobile devices
Hotfix for display bug in mobile browsers caused by not understanding calc()

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -226,7 +226,7 @@ body {
 	left: 0;
 	top: 100px;
 	width: 100%;
-	height: 90%;
+	height: 100%;
 	height: calc(100% - 100px);
 	top: 100px;
 	z-index: 20;
